crates/mdt_cli/tests/snapshots/snapshots__check_format_github_stale.snap
---
source: crates/mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpesSzBO
    - check
    - "--format"
    - github
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----
::warning file=readme.md,line=3,col=1::Consumer block `intro` is out of date
::warning file=readme.md,line=9,col=10::Consumer block `version` is out of date

----- stderr -----

2 consumer block(s) are out of date. Run `mdt update` to fix.
