crates/mdt_cli/tests/snapshots/snapshots__check_format_json_up_to_date.snap
---
source: crates/mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpnAz0EY
    - check
    - "--format"
    - json
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
{"ok":true,"stale":[]}

----- stderr -----
